# ozersk-gen

./: Cargo.toml  readme.md
manifest/: manifest.json
src/: compile.rs  config.rs  lib.rs  maze.rs  mesh.rs
src/client/: mod.rs
src/server/: mod.rs
