[package]
name = "test-gen-maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze_generator = "2.0.0"
rrplug = { git = "https://github.com/R2NorthstarTools/rrplug.git" }
once_cell = "*"
parking_lot = "0.12.1"
log = "*"
bincode = "1.3.3"
base64 = "0.21.2"
serde = { version = "1.0.164", features = ["derive"] }
rand = "0.8.5"

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]